@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-21T01:33:07Z",
+  "timestamp" : "2022-05-21T08:27:23Z",
   "count_outdated" : 206,
   "uniques_outdated" : 41,
-  "count" : 225,
-  "uniques" : 50,
+  "count" : 226,
+  "uniques" : 51,
   "views" : [
     {
       "timestamp": "2022-05-07T00:00:00Z",
@@ -63,6 +63,13 @@
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
