@@ -1,3 +1,10 @@
+2022-05-21T08:27:23Z:
+* notice: last 14d: unq all: 1 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 41 206 / 50 225
+* notice: next accum: outdated-unq outdated-all / unq all: 41 206 / 51 226
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-21]
+
 2022-05-21T01:33:07Z:
 * notice: last 14d: unq all: 1 19
 * notice: prev accum: outdated-unq outdated-all / unq all: 40 199 / 49 226
